--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -1,7 +1,7 @@
 
 body{
     /* background-image: url('/images/620eadce00f6a.jpg'); */
-    background: #2e2e2e;
+    /* background: #2e2e2e; */
 }
 
 #join {
