--- a/server/views/users/login.ejs
+++ b/server/views/users/login.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %> 
+<%- include('../partials/head') %>
 <section id="join" class="my-5">
     <div class="join_banner px-5">
         <div class="join_banner_text mt-5">
