--- a/server/views/layouts/boilerplate.ejs
+++ b/server/views/layouts/boilerplate.ejs
@@ -1,15 +1,7 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boilerplate</title>
-    <script src="<%= fontAwesomeSrc %> " crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-</head>
+    <%- include('../partials/head') %>
 <body>
-    <%- include('../partials/nav') %> 
+    <%- include('../partials/nav') %>
     <%- body %>     
     <%- include('../partials/footer') %>
 </body>
