--- a/server/views/arts/new.ejs
+++ b/server/views/arts/new.ejs
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-2">
-            <form action="/arts" method="POST" >
+            <!-- <form action="/arts" method="POST"> -->
+            <form action="/arts" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">title</label>
                     <input type="text" name="title" class="form-control">
@@ -11,10 +12,10 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password">
                 </div> -->
-                <!-- <div class="form-group">
-                    <label for="file">file</label>
-                    <input type="file" name="file" class="form-conrol">
-                </div> -->
+                <div class="form-group">
+                    <label for="art">file</label>
+                    <input type="file" name="art" class="form-conrol">
+                </div>
                 <div class="form-group">
                     <label for="location">location</label>
                     <input type="text" class="form-control" name="location">
