--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boilerplate</title>
-    <script src="<%= fontAwesomeSrc %> " crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/db5267dd64.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
