--- a/server/views/arts/new.ejs
+++ b/server/views/arts/new.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head') %>
+<%- layout('layouts/boilerplate')  %> 
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-2">
