--- a/server/views/arts/show.ejs
+++ b/server/views/arts/show.ejs
@@ -1,5 +1,33 @@
 <%- layout('layouts/boilerplate')  %> 
-<h1>show page</h1>
-    <h3><%= art.title %> </h3>
-    <p>Created by <%= art.user.username %></p>
-
+<section class="art container mt-5">
+    <div class="row">
+        <div class="col-md-8">
+            <img class='img-fluid'src="<%= art.imageURL.url %>" alt="">
+            <div class="row">
+                <div class="col-12">
+                    blah blah blah 
+                </div>
+                <div class="col-8">
+                    <h5><%= art.title %></h5>
+                    <p>Created by: <%= art.user.username %></p>
+                </div>
+                <div class="col-4">published: date</div>
+                <div class="col-12">
+                    <h5>tags: </h5>
+                </div>
+            </div>
+            <p><%= art.description %></p>
+            <p>Comments</p>
+        </div>
+        <div class="col-md-4 text-center">
+            <h5><a href="/users/<%= art.user._id %>">See More by <%= art.user.username %></a></h5>
+            <div class="row">
+                <% arts.forEach(art => { %>
+                    <div class="col-4">
+                        <img src="<%= art.imageURL.url %>" alt="" class="img-fluid">
+                    </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
+</section>
