--- a/server/views/partials/nav.ejs
+++ b/server/views/partials/nav.ejs
@@ -1,32 +1,38 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
+  <div class="container">
+  <a href="/arts" class="navbar-brand">Logo</a>
+  <!-- when nav collapse -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item me-3"></li>
+      <li class="nav-item">
+        <a href="arts/new">
+          <button class="btn btn-success me-3">Create</button>
+        </a>
+      </li>
+      <% if(!signedUser) { %> 
+      <li class="nav-item">
+        <a href="/users/new">
+          <button class="btn btn-success me-3">Join</button>
+        </a>
+      </li>
+      <!-- signedUser comes from res.signedUser -->
+      <li class="nav-item">
+        <a href="/users/login">
+          <button class="btn btn-success">Log In</button>
+        </a>
+      </li>
+      <% } else { %> 
+      <li class="nav-item">
+        <a href="/users/logout">
+          <button class="btn btn-danger">Log Out</button>
+        </a>
+      </li>
+      <% } %> 
+    </ul>
+  </div>
+</div>
+</nav>
