--- a/server/views/arts/edit.ejs
+++ b/server/views/arts/edit.ejs
@@ -3,10 +3,10 @@
     <div class="row">
         <div class="col-md-6 offset-2 mt-3">
             <!-- <form action="/arts" method="POST"> -->
-            <form action="/arts" method="POST" enctype="multipart/form-data">
+            <form action="/arts/<%= art._id %>" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">title</label>
-                    <input type="text" name="title" class="form-control">
+                    <input type="text" name="title" class="form-control" value="<%= art.title %> ">
                 </div>
                 <!-- <div class="form-group">
                     <label for="password">Password</label>
@@ -19,11 +19,10 @@
                 <div class="form-group mt-3">
                     <label for="description">Description:</label>
                     <br>
-                    <textarea name="description" id="description" cols="30" rows="10" class="form-cotrol"></textarea>
+                    <textarea name="description" id="description" cols="30" rows="10" class="form-cotrol"><%= art.description %> </textarea>
                 </div>
-                <button type="submit" class="btn btn-success my-4 px-3">Create</button>
+                <button type="submit" class="btn btn-success my-4 px-3">Update</button>
             </form>
         </div>
     </div>
-
 </div>
