--- a/server/views/partials/nav.ejs
+++ b/server/views/partials/nav.ejs
@@ -1,38 +1,59 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
   <div class="container">
-  <a href="/arts" class="navbar-brand">Logo</a>
-  <!-- when nav collapse -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item me-3"></li>
-      <li class="nav-item">
-        <a href="arts/new">
-          <button class="btn btn-success me-3">Create</button>
-        </a>
-      </li>
-      <% if(!signedUser) { %> 
-      <li class="nav-item">
-        <a href="/users/new">
-          <button class="btn btn-success me-3">Join</button>
-        </a>
-      </li>
-      <!-- signedUser comes from res.signedUser -->
-      <li class="nav-item">
-        <a href="/users/login">
-          <button class="btn btn-success">Log In</button>
-        </a>
-      </li>
-      <% } else { %> 
-      <li class="nav-item">
-        <a href="/users/logout">
-          <button class="btn btn-danger">Log Out</button>
-        </a>
-      </li>
-      <% } %> 
-    </ul>
+    <a href="/arts" class="navbar-brand"><img src="/images/logo.PNG" style="width: 50px; height: 50px;" alt=""> Nyan Art</a>
+    <form action="/arts" class="form-inline">
+      <input type="text" name="q" class=" mt-2 form-control" id="q" placeholder="Search">
+    </form>
+    <!-- when nav collapse -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item me-3"></li>
+        <li class="nav-item">
+          <a href="/arts/new">
+            <button class="btn btn-success me-3">Create</button>
+          </a>
+        </li>
+        <!-- checking if the user is signed in -->
+        <% if(!signedUser) { %> 
+        <li class="nav-item">
+          <a href="/users/new">
+            <button class="btn btn-success me-3">Join</button>
+          </a>
+        </li>
+        <!-- signedUser comes from res.signedUser -->
+        <li class="nav-item">
+          <a href="/users/login">
+            <button class="btn btn-success">Log In</button>
+          </a>
+        </li>
+        <% } else { %> 
+        <!-- <li class="nav-item">
+          <a href="/users/logout">
+            <button class="btn btn-danger">Log Out</button>
+          </a>
+        </li> -->
+        <!-- user Icon -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="/images/favicon.png" width="30px" alt="">
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/users/<%= signedUser._id%>"><%= signedUser.username %></a></li>
+            <li><a class="dropdown-item" href="/users/<%= signedUser._id %>/account">Account setting</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li class="nav-item">
+              <a href="/users/logout" class="dropdown-item">
+                <button class="btn btn-danger">Log Out</button>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <% } %> 
+      </ul>
+    </div>
   </div>
-</div>
 </nav>
