Lastest version for test deploy on ec2

--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,2 +1,15 @@
-footer 
+<footer class="text-center">
+    <h5>Copyright&copy 2022 <a href="https://www.helloearth.io">Nantawat Laothong</a></h5>
+    <div class="social">
+            <div class="social-item">
+                <a href="https://github.com/NantawatLaothong"><i class="bi bi-github"></i></a>
+            </div>
+            <div class="social-item">
+                <a href="https://www.linkedin.com/in/nantawat-laothong-77499413a/"><i class="bi bi-linkedin"></i></a>
+            </div>
+            
+            
+    </div>
+    
+</footer> 
 <script src="/js/bootstrap.js"></script>
