--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -3,6 +3,9 @@ body{
     /* background-image: url('/images/620eadce00f6a.jpg'); */
     background: #06070d;
     color: #fff;
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 4em;
 }
 
 #join {
@@ -63,4 +66,29 @@ body{
 
 .user-profile-text {
     float: left;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4em;
+}
+
+.social {
+    font-size: 2em;
+}
+
+.social-item {
+    display: inline-block;
+    margin: 0 1em;
+    color: #fff;
+}
+
+.social-item a {
+    color: #fff;
+}
+
+.social-item a:hover {
+    color:#777;
 }
