--- a/server/views/arts/new.ejs
+++ b/server/views/arts/new.ejs
@@ -6,14 +6,14 @@
             <form action="/arts" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">title</label>
-                    <input type="text" name="title" class="form-control">
+                    <input type="text"  name="title" class="form-control" required>
                 </div>
                 <!-- <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password">
                 </div> -->
                 <div class="custom-file mt-3">
-                    <input type="file" name="art" class="custom-file-input form-conrol">
+                    <input type="file" name="art" class="custom-file-input form-conrol" required>
                     <label class="custom-file-label" for="art">file</label>
                 </div>
                 <div class="form-group mt-3">
