--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nyan Art (Meow~)</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <script src="https://kit.fontawesome.com/db5267dd64.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/db5267dd64.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
