--- a/server/views/users/new.ejs
+++ b/server/views/users/new.ejs
@@ -20,19 +20,19 @@
         <form action="/users" method="POST">
             <div class="form-group">
                 <label for="username">Pick a username</label>
-                <input type="text" name="username" class="form-control">
+                <input type="text" name="username" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="email">Add your Email</label>
-                <input type="text" class="form-control" name="email">
+                <input type="text" class="form-control" name="email" required>
             </div>
             <div class="form-group">
                 <label for="email">Confirm email</label>
-                <input type="text" class="form-control" name="confirmedEmail">
+                <input type="text" class="form-control" name="confirmedEmail" required>
             </div>
             <div class="form-group">
                 <label for="password">Choose a password</label>
-                <input type="password" class="form-control" name="password" aria-describedby='passwordHelp'>
+                <input type="password" class="form-control" name="password" aria-describedby='passwordHelp' required>
                 <small id="passwordHelp" class="form-txt text-muted">Min 6 Characters, numbers & letters</small>
             </div>
             <div class="form-group">
