--- a/server/views/arts/index.ejs
+++ b/server/views/arts/index.ejs
@@ -4,10 +4,25 @@
     <h3>Home</h3>
     <div class="row">
         <% arts.forEach(art => { %>
-            <div class="col-md-4">
+            <div class="col-md-4 art">
+                    <img class="img-fluid art__painting" src="<%= art.imageURL.url %>" alt="">
+                <!-- <a href="/arts/<%= art._id %>" class="art__overlay__link">-->
                 <a href="/arts/<%= art._id %>">
-                    <img class="img-fluid" src="<%= art.imageURL.url %>" alt="">
-                </a>
+                <div class="art__overlay">
+                    <div class="art__overlay__content">
+                        <div class="art__title"><%= art.title %></div>
+                        <div class="art__creater">
+                            <img src="/images/favicon.png" alt="" width="50px">
+                            
+                            <%= art.user.username %>
+                         
+                            <span class="art__comments__count">
+                                <i class="bi bi-chat"></i> <%= art.comments.length %>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </a> 
             </div>
         <% }) %>
     </div>
