--- a/server/views/arts/edit.ejs
+++ b/server/views/arts/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-6 offset-2 mt-3">
             <!-- <form action="/arts" method="POST"> -->
-            <form action="/arts/<%= art._id %>" method="POST" enctype="multipart/form-data">
+            <form action="/arts/<%= art._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">title</label>
                     <input type="text" name="title" class="form-control" value="<%= art.title %> ">
