--- a/server/views/arts/new.ejs
+++ b/server/views/arts/new.ejs
@@ -13,7 +13,7 @@
                     <input type="password" class="form-control" name="password">
                 </div> -->
                 <div class="custom-file mt-3">
-                    <input type="file" name="art" class="custom-file-input form-conrol" required>
+                    <input type="file" name="art" class="" required/>
                     <label class="custom-file-label" for="art">file</label>
                 </div>
                 <div class="form-group mt-3">
@@ -25,5 +25,4 @@
             </form>
         </div>
     </div>
-
 </div>
