--- a/server/views/arts/index.ejs
+++ b/server/views/arts/index.ejs
@@ -12,7 +12,7 @@
                     <div class="art__overlay__content">
                         <div class="art__title"><%= art.title %></div>
                         <div class="art__creater">
-                            <img src="/images/favicon.png" alt="" width="50px">
+                            <img src="<%= art.user.Bio.profileImage.url %>" alt="" width="50px">
                             
                             <%= art.user.username %>
                          
