--- a/server/views/arts/new.ejs
+++ b/server/views/arts/new.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/boilerplate')  %> 
 <div class="container art-form" id="art-form">
     <div class="row">
-        <div class="col-md-6 offset-2 mt-3">
+        <div class="col-md-6 offset-md-2 mt-3">
             <!-- <form action="/arts" method="POST"> -->
             <form action="/arts" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
