--- a/server/views/partials/nav.ejs
+++ b/server/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light ">
   <div class="container">
     <a href="/arts" class="navbar-brand"><img src="/images/logo.PNG" style="width: 50px; height: 50px;" alt=""> Nyan Art</a>
     <form action="/arts" class="form-inline">
@@ -38,7 +38,7 @@
         <!-- user Icon -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="/images/favicon.png" width="30px" alt="">
+            <img src="<%= signedUser.Bio.profileImage.url %>" width="30px" alt=""><span class="ps-2"><%= signedUser.username %></span>
           </a>
           <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/users/<%= signedUser._id%>"><%= signedUser.username %></a></li>
