--- a/server/views/users/account.ejs
+++ b/server/views/users/account.ejs
@@ -1,25 +1,25 @@
 <%- layout('layouts/boilerplate')  %> 
 <div class="container">
     <div class="row mt-5">
-    <div class="col-2 position-fixed">
-        <div id="list-example" class="list-group ">
-            <a class="list-group-item list-group-item-action" href="#bio-form">Bio</a>
-            <!-- <a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a> -->
-          </div>
-    </div>
-    <div class="col-8 offset-4">
+        <div class="col-sm-2 d-sm-block d-none">
+            <div id="list-example" class="list-group ">
+                <a class="list-group-item list-group-item-action" href="#bio-form">Bio</a>
+                <!-- <a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
+                <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a> -->
+            </div>
+        </div>
+    <div class="col-sm-8 offset-sm-2">
         <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
             <div class="form-container" id="bio-form">
-                <form action="">
+                <form action="/users/<%= signedUser._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="profileImg">Profile Image</label>
-                        <input type="file" class="form-control-file" id="profileImg" name="bio[profileImage]">
+                        <input type="file" class="form-control-file" id="profileImg" name="profileImage">
                       </div>
                     <div class="form-group">
                         <label for="bio]">Bio:</label>
-                        <textarea class="form-control" name="bio[text]" id="" cols="30" rows="5"></textarea>
+                        <textarea class="form-control" name="bio" id="" cols="30" rows="5"></textarea>
                     </div>
                     <button class="mt-3 btn btn-primary">Update</button>
                 </form>
