--- a/server/views/users/new.ejs
+++ b/server/views/users/new.ejs
@@ -1,61 +1,63 @@
 <%- include('../partials/head') %>
-<section id="join" class="my-5">
-    <div class="join_banner px-5">
-        <div class="join_banner_text mt-5">
-            <h1>JOIN THE NEW GROWING COMMUNITY OF ARTISTS</h1>
-            <p>Find inspirations and techniques, and become a better artist. Everything an artist need in one site</p>
+<section id="join" class="my-5 container">
+    <div class="row">
+        <div class="col-md-4 px-5 offset-2 d-none d-sm-block">
+            <div class="join_banner_text mt-5">
+                <h1>JOIN THE NEW GROWING COMMUNITY OF ARTISTS</h1>
+                <p>Find inspirations and techniques, and become a better artist. Everything an artist need in one site</p>
+            </div>
         </div>
-    </div>
-    
-    <div class="join_form px-5">
-        <!-- <i class="fas fa-github fa-5x" ></i> -->
-        <p style="text-align:end">
-            <a href="/arts">
-            <i class="fas fa-times fa-2x ml-auto"></i>
-            </a>
-        </p>
         
-        <h4>Join our Community</h4>
-        <p>Already have an account? <a id='loginBtn' href="/users/login">Log in</a></p>
-        <form action="/users" method="POST">
-            <div class="form-group">
-                <label for="username">Pick a username</label>
-                <input type="text" name="username" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Add your Email</label>
-                <input type="text" class="form-control" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Confirm email</label>
-                <input type="text" class="form-control" name="confirmedEmail" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Choose a password</label>
-                <input type="password" class="form-control" name="password" aria-describedby='passwordHelp' required>
-                <small id="passwordHelp" class="form-txt text-muted">Min 6 Characters, numbers & letters</small>
-            </div>
-            <div class="form-group">
-                <label for="DOB">Date of Birth</label>
-                <div class="form-inline">
-                    <select name="DOB[month]" id="month">
-                        <% months.forEach(month => { %>
-                         <option value="<%= month %>"><%= month %></option>
-                        <% }) %>
-                    </select>
-                    <select name="DOB[day]" id="day" class="mx-3">
-                        <% for(var i = 1; i <= 31; i++) {%>
-                        <option value="<%= i %>"><%= i %></option>
-                            <% } %>  
-                    </select>
-                    <select name="DOB[year]" id="year">
-                        <% for(var i = 2020; i >= 1900; i--) {%>
+        <div class="col-md-4 px-5">
+            <!-- <i class="fas fa-github fa-5x" ></i> -->
+            <p style="text-align:end">
+                <a href="/arts">
+                <i class="fas fa-times fa-2x ml-auto" ></i>
+                </a>
+            </p>
+            
+            <h4>Join our Community</h4>
+            <p>Already have an account? <a id='loginBtn' href="/users/login">Log in</a></p>
+            <form action="/users" method="POST">
+                <div class="form-group">
+                    <label for="username">Pick a username</label>
+                    <input type="text" name="username" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Add your Email</label>
+                    <input type="text" class="form-control" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Confirm email</label>
+                    <input type="text" class="form-control" name="confirmedEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Choose a password</label>
+                    <input type="password" class="form-control" name="password" aria-describedby='passwordHelp' required>
+                    <small id="passwordHelp" class="form-txt text-muted">Min 6 Characters, numbers & letters</small>
+                </div>
+                <div class="form-group">
+                    <label for="DOB">Date of Birth</label>
+                    <div class="form-inline">
+                        <select name="DOB[month]" id="month">
+                            <% months.forEach(month => { %>
+                             <option value="<%= month %>"><%= month %></option>
+                            <% }) %>
+                        </select>
+                        <select name="DOB[day]" id="day" class="mx-3">
+                            <% for(var i = 1; i <= 31; i++) {%>
                             <option value="<%= i %>"><%= i %></option>
                                 <% } %>  
-                    </select>
+                        </select>
+                        <select name="DOB[year]" id="year">
+                            <% for(var i = 2020; i >= 1900; i--) {%>
+                                <option value="<%= i %>"><%= i %></option>
+                                    <% } %>  
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <button type="submit" class="btn btn-success my-4 px-3">Join</button>
-        </form>
+                <button type="submit" class="btn btn-success my-4 px-3">Join</button>
+            </form>
+        </div>
     </div>
 </section>
