--- a/server/views/users/account.ejs
+++ b/server/views/users/account.ejs
@@ -14,7 +14,7 @@
             <div class="form-container" id="bio-form">
                 <form action="/users/<%= signedUser._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="profileImg">Profile Image</label>
+                        <label for="profileImage">Profile Image</label>
                         <input type="file" class="form-control-file" id="profileImg" name="profileImage">
                       </div>
                     <div class="form-group">
