--- a/server/views/arts/show.ejs
+++ b/server/views/arts/show.ejs
@@ -2,7 +2,9 @@
 <section class="art__container container mt-5">
     <div class="row">
         <div class="col-md-8">
-            <img class='img-fluid'src="<%= art.imageURL.url %>" alt="">
+            <div class="img__container text-center">
+                <img class='img-fluid'src="<%= art.imageURL.url %>" alt="">
+            </div>
             <div class="row mt-3">
                 <div class="col-8">
                     <h5><%= art.title %></h5>
