--- a/server/views/users/login.ejs
+++ b/server/views/users/login.ejs
@@ -1,5 +1,8 @@
+
 <%- include('../partials/head') %>
 <section id="join" class="container my-5">
+    <!-- flash message -->
+    <%- include('../partials/flash')  %> 
     <div class="row">
         <div class="col-md-4 px-5  mt-5 d-none d-sm-block offset-md-2">
             <div class="join_banner_text">
@@ -33,3 +36,6 @@
     </div>
     
 </section>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
