--- a/server/views/arts/show.ejs
+++ b/server/views/arts/show.ejs
@@ -60,9 +60,9 @@
         </div>
         <div class="col-md-4 text-center">
             <h5><a href="/users/<%= art.user._id %>">See More by <%= art.user.username %></a></h5>
-            <div class="row">
+            <div class="grid">
                 <% arts.forEach(art => { %>
-                    <div class="col-4">
+                    <div class="grid-item-show">
                         <a href="/arts/<%= art._id %>"><img src="<%= art.imageURL.url %>" alt="" class="img-fluid"></a>
                     </div>
                 <% }) %>
