adding tags input to edit page. Fix tags issues

--- a/server/views/arts/index.ejs
+++ b/server/views/arts/index.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/boilerplate')  %> 
 
 <div class="container">
-    <h3>Home</h3>
+    <h3><%= q ? q : "Home" %> </h3>
     <%- include('../partials/flash')  %> 
         <div class="grid">
             <% arts.forEach(art => { %>
