Edit dockerfile and fixed static file errors

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light ">
   <div class="container">
-    <a href="/arts" class="navbar-brand"><img src="/images/logo.PNG" style="width: 50px; height: 50px;" alt=""> Nyan Art</a>
+    <a href="/arts" class="navbar-brand">NOTDEVIANTART</a>
     <form action="/arts" class="form-inline">
       <input type="text" name="q" class=" mt-2 form-control" id="q" placeholder="Search">
     </form>
