changed to use basepath

--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,5 +1,5 @@
 <%- layout('layouts/boilerplate')  %> 
 <main class="container mt-5 text-center">
     <h1>Something went wrong</h1>
-    <img class='img-fluid' src="/images/500.jpg" alt="" width="50%">
+    <img class='img-fluid' src="https://devientart-clone-bucker-2025-helloearth-io.s3.us-east-2.amazonaws.com/500.jpg" alt="" width="50%">
 </main>
