--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,5 @@
 <%- layout('layouts/boilerplate')  %> 
 <main class="container mt-5 text-center">
     <h1>Page not found</h1>
-    <img class='img-fluid' src="/images/page-not-found.jpg" alt="" width="50%">
+    <img class='img-fluid' src="https://devientart-clone-bucker-2025-helloearth-io.s3.us-east-2.amazonaws.com/page-not-found.jpg" alt="" width="50%">
 </main>
