--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,5 +1,5 @@
 <%- layout('layouts/boilerplate')  %> 
-<div class="jumbotron cover-image" style="background-image: url('/images/favicon.png');">
+<div class="jumbotron cover-image" style="background-image: url('https://devientart-clone-bucker-2025-helloearth-io.s3.us-east-2.amazonaws.com/favicon.ico');">
     <div class="container">
         <div class="user-container">
             <img src="<%= user.Bio.profileImage.url %>" alt="" class="user-profile-img">
