--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -14,14 +14,14 @@
         <div class="col-md-4  px-5">
             <!-- <i class="fas fa-github fa-5x" ></i> -->
             <p style="text-align:end">
-                <a href="/arts">
+                <a href="/notdeviantart/arts">
                 <i class="fas fa-times fa-2x ml-auto"></i>
                 </a>
             </p>
             
             <h4>Log in</h4>
-            <p>Become a member. <a id='loginBtn' href="/users/new">Join</a></p>
-            <form action="/users/login" method="POST">
+            <p>Become a member. <a id='loginBtn' href="/notdeviantart/users/new">Join</a></p>
+            <form action="/notdeviantart/users/login" method="POST">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" class="form-control">
