--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -17,7 +17,7 @@
             <div class="row">
                 <% arts.forEach(art => { %>
                     <div class="col-sm-4">
-                        <a href="/arts/<%= art._id %>">
+                        <a href="/notdeviantart/arts/<%= art._id %>">
                             <img src="<%= art.imageURL.url %> " alt="" class="img-fluid">
                         </a>
                         <!-- <p><%= art.title %> </p> -->
