--- a/views/arts/new.ejs
+++ b/views/arts/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-2 mt-3">
             <!-- <form action="/arts" method="POST"> -->
-            <form action="/arts" method="POST" enctype="multipart/form-data">
+            <form action="/notdeviantart/arts" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">title</label>
                     <input type="text"  name="title" class="form-control" required>
