--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light ">
   <div class="container">
-    <a href="/arts" class="navbar-brand">NOTDEVIANTART</a>
-    <form action="/arts" class="form-inline">
+    <a href="/notdeviantart/arts" class="navbar-brand">NOTDEVIANTART</a>
+    <form action="/notdeviantart/arts" class="form-inline">
       <input type="text" name="q" class=" mt-2 form-control" id="q" placeholder="Search">
     </form>
     <!-- when nav collapse -->
@@ -12,20 +12,20 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item me-3"></li>
         <li class="nav-item">
-          <a href="/arts/new">
+          <a href="/notdeviantart/arts/new">
             <button class="btn btn-success me-3">Create</button>
           </a>
         </li>
         <!-- checking if the user is signed in -->
         <% if(!signedUser) { %> 
         <li class="nav-item">
-          <a href="/users/new">
+          <a href="/notdeviantart/users/new">
             <button class="btn btn-success me-3">Join</button>
           </a>
         </li>
         <!-- signedUser comes from res.signedUser -->
         <li class="nav-item">
-          <a href="/users/login">
+          <a href="/notdeviantart/users/login">
             <button class="btn btn-success">Log In</button>
           </a>
         </li>
@@ -41,12 +41,12 @@
             <img src="<%= signedUser.Bio.profileImage.url %>" width="30px" alt=""><span class="ps-2"><%= signedUser.username %></span>
           </a>
           <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/users/<%= signedUser._id%>"><%= signedUser.username %></a></li>
-            <li><a class="dropdown-item" href="/users/<%= signedUser._id %>/account">Account setting</a></li>
+            <li><a class="dropdown-item" href="/notdeviantart/users/<%= signedUser._id%>"><%= signedUser.username %></a></li>
+            <li><a class="dropdown-item" href="/notdeviantart/users/<%= signedUser._id %>/account">Account setting</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
             <li class="nav-item">
-              <a href="/users/logout" class="dropdown-item">
+              <a href="/notdeviantart/users/logout" class="dropdown-item">
                 <button class="btn btn-danger">Log Out</button>
               </a>
             </li>
