--- a/views/users/account.ejs
+++ b/views/users/account.ejs
@@ -12,7 +12,7 @@
     <div class="col-sm-8 offset-sm-2">
         <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
             <div class="form-container" id="bio-form">
-                <form action="/users/<%= signedUser._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                <form action="/notdeviantart/users/<%= signedUser._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="profileImage">Profile Image</label>
                         <input type="file" class="form-control-file" id="profileImg" name="profileImage">
