--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -13,14 +13,14 @@
         <div class="col-md-4 px-5">
             <!-- <i class="fas fa-github fa-5x" ></i> -->
             <p style="text-align:end">
-                <a href="/arts">
+                <a href="/notdeviantart/arts">
                 <i class="fas fa-times fa-2x ml-auto" ></i>
                 </a>
             </p>
             
             <h4>Join our Community</h4>
-            <p>Already have an account? <a id='loginBtn' href="/users/login">Log in</a></p>
-            <form action="/users" method="POST">
+            <p>Already have an account? <a id='loginBtn' href="/notdeviantart/users/login">Log in</a></p>
+            <form action="/notdeviantart/users" method="POST">
                 <div class="form-group">
                     <label for="username">Pick a username</label>
                     <input type="text" name="username" class="form-control" required>
